@startuml

entity "admins" {
    *tg_id : int <<PK>>
    --
    role : AdminRoleEnum
}

entity "clients" as users {
    *id : int <<PK>>
    --
    name : varchar(255)
}

entity "coaches" {
    *id : int <<PK>>
    --
    name : varchar(255)
    specialization : SpecializationEnum
}

entity "number_of_tennis_training_available" as tennis_balances {
    *client_id : int <<FK>>
    *coach_id : int <<FK>>
    *training_type : TrainingTypesEnum
    --
    number_of_training : int
    --
    CONSTRAINT PK (client_id, coach_id, training_type)
}

entity "visits" as visits {
    *id : int <<PK>>
    *client_id : int <<FK>>
    *coach_id : int <<FK>>
    --
    visit_datetime : datetime
    training_type : TrainingTypesEnum
}

entity "payments" as payments {
    *id : int <<PK>>
    *client_id : int <<FK>>
    *coach_id : int <<FK>>
    --
    payment_date : date
    amount : float
}

users ||--o{ tennis_balances
users ||--o{ visits
users ||--o{ payments

coaches ||--o{ visits
coaches ||--o{ tennis_balances
coaches ||--o{ payments

@enduml
